Add Github in social icon

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div id=social--list>
             <a href='https://www.facebook.com/tszyi.lin.3' target='_blank'>Facebook</a>
             <a href='https:www.linkedin.com/in/tsz-yi-lin-966931188' target='_blank'>LinkedIn</a>
+            <a href='https://github.com/tszyilin' target='_blank'>Github</a>
             <a href='./assets/myresume.pdf' target='_blank'>Download Resume</a>
         </div>
         <section class="'section--page">
